FIX: Add sizing min and region spacing to logo in navbar

--- a/src/assets/css/global/blocks/site-logo.css
+++ b/src/assets/css/global/blocks/site-logo.css
@@ -7,5 +7,6 @@
 
 .logo img {
   padding-inline-end: var(--space-s);
-  max-width: var(--size-step-4);
+  min-width: var(--size-step-3);
+  max-width: var(--size-step-6);
 }
